update source and create ordering enforcement

--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -35,6 +35,12 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
+    - name: Cache build
+      uses: actions/cache@v3
+      with:
+        key: cached-build-${{github.sha}}
+        path: .
+
     - name: Test with Maven
       run: mvn test
 
@@ -48,12 +54,20 @@ jobs:
   # Uploads dependency graph to GitHub to receive Dependabot alerts 
   update_dependence_graph:
 
+    needs: [maven_test]
+
     runs-on: ubuntu-latest
 
     permissions:
       contents: read
 
     steps:
+
+    - name: Restore cached build
+      uses: actions/cache@v3
+      with:
+        key: cached-build-${{github.sha}}
+        path: .
 
     # https://github.com/marketplace/actions/maven-dependency-tree-dependency-submission
     - name: Update dependency graph
