--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <repository>
       <id>github</id>
       <name>GitHub Apache Maven Packages</name>
-      <url>https://github.com/CS1632/supplementary-exercise-4-ci-cd-junit-Elsklivet</url>
+      <url>https://maven.pkg.github.com/CS1632/supplementary-exercise-4-ci-cd-junit-Elsklivet</url>
     </repository>
   </distributionManagement>
 
